--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#Business">Business</a></li>
           <li><a href="#team">Team</a></li>
-          <li><a href="#pricing">Pricing</a></li>
+          <!--<li><a href="#pricing">Pricing</a></li>-->
           <li class="dropdown"><a href="#"><span>Features</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">A.I. chatbot</a></li>
