--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <!--<li><a href="#pricing">Pricing</a></li>-->
           <li class="dropdown"><a href="#"><span>Features</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">A.I. chatbot</a></li>
+              <li><a href="chat-bot.html">A.I. chatbot</a></li>
               <!--<li class="dropdown"><a href="#"><span></span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
