--- a/chat-bot.html
+++ b/chat-bot.html
@@ -92,8 +92,8 @@
     
         </div>
       </header>
- <iframe style="height:100vh;width:100vw" frameBorder="0" 
-src="https://widget.writesonic.com/CDN/index.html?service-base-url=https%3A%2F%2Fapi-azure.botsonic.ai&token=5ee99cf8-090a-4cd4-ba1e-46f4f9b9b3f0&base-origin=https%3A%2F%2Fhttps://officialtaxify.vercel.app/&instance-name=Botsonic&standalone=true&page-url=https%3A%2F%2Fbot.writesonic.com%2Fbots%2F6190da53-00bb-415d-adf7-0bf1d512c063%2Fintegrations%3Ftab%3Dembeddings">
+  <iframe style="height:100vh;width:100vw" frameBorder="0" 
+src="https://widget.writesonic.com/CDN/index.html?service-base-url=https%3A%2F%2Fapi-azure.botsonic.ai&token=5ee99cf8-090a-4cd4-ba1e-46f4f9b9b3f0&base-origin=https://taxify-seven.vercel.app/&instance-name=Botsonic&standalone=true&page-url=https%3A%2F%2Fbot.writesonic.com%2Fbots%2F6190da53-00bb-415d-adf7-0bf1d512c063%2Fintegrations%3Ftab%3Dembeddings">
 </iframe>
 
 
