--- a/chat-bot.html
+++ b/chat-bot.html
@@ -60,12 +60,12 @@
     
           <nav id="navmenu" class="navmenu">
             <ul>
-              <li><a href="#hero" class="">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#Business">Business</a></li>
-              <li><a href="#team">Team</a></li>
-              <li><a href="#pricing">Pricing</a></li>
+              <li><a href="index.html" class="">Home</a></li>
+              <li><a href="index.html">About</a></li>
+              <li><a href="index.html">Services</a></li>
+              <li><a href="index.html">Business</a></li>
+              <li><a href="index.html">Team</a></li>
+              <li><a href="index.html/#pricing">Pricing</a></li>
               <li class="dropdown"><a href="#"><span>Features</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="chat-bot.html">A.I. chatbot</a></li>
