--- a/chat-bot.html
+++ b/chat-bot.html
@@ -64,8 +64,8 @@
               <li><a href="index.html">About</a></li>
               <li><a href="index.html">Services</a></li>
               <li><a href="index.html">Business</a></li>
-              <li><a href="index.html">Team</a></li>
-              <li><a href="index.html/#pricing">Pricing</a></li>
+              <li><a href="index.html/#team">Team</a></li>
+             <!-- <li><a href="index.html/#pricing">Pricing</a></li>-->
               <li class="dropdown"><a href="#"><span>Features</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="chat-bot.html">A.I. chatbot</a></li>
