--- a/chat-bot.html
+++ b/chat-bot.html
@@ -60,11 +60,11 @@
     
           <nav id="navmenu" class="navmenu">
             <ul>
-              <li><a href="index.html" class="">Home</a></li>
-              <li><a href="index.html">About</a></li>
-              <li><a href="index.html">Services</a></li>
-              <li><a href="index.html">Business</a></li>
-              <li><a href="index.html/team">Team</a></li>
+              <li><a href="index.html#hero" class="">Home</a></li>
+              <li><a href="index.html#about">About</a></li>
+              <li><a href="index.html#services">Services</a></li>
+              <li><a href="index.html#Business">Business</a></li>
+              <li><a href="index.html#team">Team</a></li>
              <!-- <li><a href="index.html/#pricing">Pricing</a></li>-->
               <li class="dropdown"><a href="#"><span>Features</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
