--- a/index.html
+++ b/index.html
@@ -927,6 +927,26 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
+   <script>
+  (function (w, d, s, o, f, js, fjs) {
+    w["botsonic_widget"] = o;
+    w[o] =
+      w[o] ||
+      function () {
+        (w[o].q = w[o].q || []).push(arguments);
+      };
+    (js = d.createElement(s)), (fjs = d.getElementsByTagName(s)[0]);
+    js.id = o;
+    js.src = f;
+    js.async = 1;
+    fjs.parentNode.insertBefore(js, fjs);
+  })(window, document, "script", "Botsonic", "https://widget.writesonic.com/CDN/botsonic.min.js");
+  Botsonic("init", {
+    serviceBaseUrl: "https://api-azure.botsonic.ai",
+    token: "5ee99cf8-090a-4cd4-ba1e-46f4f9b9b3f0",
+  });
+</script>
+
 </body>
 
 </html>
