--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               </li>-->
               <li><a href="#">Balanced sheet</a></li>
               <li><a href="#">Blogs</a></li>
-              <li><a href="#">Edu-portal</a></li>
+              <li><a href="edu-portal.html">Edu-portal</a></li>
             </ul>
           </li>
           <li><a href="#contact">Contact</a></li>
