--- a/chat-bot.html
+++ b/chat-bot.html
@@ -30,11 +30,28 @@
 <style>
  
 
-  iframe {
-    border: none;
-    height: 100vh;
-    width: 100vw;
-  }
+ .new-layout {
+            display: flex;
+            height: 100vh;
+            width: 100vw;
+        }
+        .image-container {
+            flex: 1;
+            background-image: url('taxify3 (convert.io)(1).jpg');
+            background-size: cover;
+            background-position: center;
+        }
+        .iframe-container {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        iframe {
+            border: none;
+            height: 100%;
+            width: 100%;
+        }
 </style>
 
   <!-- =======================================================
@@ -92,9 +109,17 @@
     
         </div>
       </header>
-  <iframe style="height:100vh;width:100vw" frameBorder="0" 
-src="https://widget.writesonic.com/CDN/index.html?service-base-url=https%3A%2F%2Fapi-azure.botsonic.ai&token=5ee99cf8-090a-4cd4-ba1e-46f4f9b9b3f0&base-origin=https://taxify-seven.vercel.app/&instance-name=Botsonic&standalone=true&page-url=https%3A%2F%2Fbot.writesonic.com%2Fbots%2F6190da53-00bb-415d-adf7-0bf1d512c063%2Fintegrations%3Ftab%3Dembeddings">
-</iframe>
+
+      <div class="container">
+        <div class="new-layout">
+            <div class="image-container"></div>
+            <div class="iframe-container">
+                <iframe 
+                    src="https://widget.writesonic.com/CDN/index.html?service-base-url=https%3A%2F%2Fapi-azure.botsonic.ai&token=5ee99cf8-090a-4cd4-ba1e-46f4f9b9b3f0&base-origin=https%3A%2F%2Fofficialtaxify.vercel.app&instance-name=Botsonic&standalone=true&page-url=https%3A%2F%2Fbot.writesonic.com%2Fbots%2F6190da53-00bb-415d-adf7-0bf1d512c063%2Fintegrations%3Ftab%3Dembeddings">
+                </iframe>
+            </div>
+        </div>
+    </div>
 
 
   <footer id="footer" class="footer">
