--- a/chat-bot.html
+++ b/chat-bot.html
@@ -30,28 +30,11 @@
 <style>
  
 
- .new-layout {
-            display: flex;
-            height: 100vh;
-            width: 100vw;
-        }
-        .image-container {
-            flex: 1;
-            background-image: url('taxify3 (convert.io)(1).jpg');
-            background-size: cover;
-            background-position: center;
-        }
-        .iframe-container {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        iframe {
-            border: none;
-            height: 100%;
-            width: 100%;
-        }
+  iframe {
+    border: none;
+    height: 100vh;
+    width: 100vw;
+  }
 </style>
 
   <!-- =======================================================
@@ -77,11 +60,11 @@
     
           <nav id="navmenu" class="navmenu">
             <ul>
-              <li><a href="index.html#hero" class="">Home</a></li>
-              <li><a href="index.html#about">About</a></li>
-              <li><a href="index.html#services">Services</a></li>
-              <li><a href="index.html#Business">Business</a></li>
-              <li><a href="index.html#team">Team</a></li>
+              <li><a href="index.html" class="">Home</a></li>
+              <li><a href="index.html">About</a></li>
+              <li><a href="index.html">Services</a></li>
+              <li><a href="index.html">Business</a></li>
+              <li><a href="index.html/team">Team</a></li>
              <!-- <li><a href="index.html/#pricing">Pricing</a></li>-->
               <li class="dropdown"><a href="#"><span>Features</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
@@ -109,17 +92,9 @@
     
         </div>
       </header>
-
-      <div class="container">
-        <div class="new-layout">
-            <div class="image-container"></div>
-            <div class="iframe-container">
-                <iframe 
-                    src="https://widget.writesonic.com/CDN/index.html?service-base-url=https%3A%2F%2Fapi-azure.botsonic.ai&token=5ee99cf8-090a-4cd4-ba1e-46f4f9b9b3f0&base-origin=https%3A%2F%2Fofficialtaxify.vercel.app&instance-name=Botsonic&standalone=true&page-url=https%3A%2F%2Fbot.writesonic.com%2Fbots%2F6190da53-00bb-415d-adf7-0bf1d512c063%2Fintegrations%3Ftab%3Dembeddings">
-                </iframe>
-            </div>
-        </div>
-    </div>
+  <iframe style="height:100vh;width:100vw" frameBorder="0" 
+src="https://widget.writesonic.com/CDN/index.html?service-base-url=https%3A%2F%2Fapi-azure.botsonic.ai&token=5ee99cf8-090a-4cd4-ba1e-46f4f9b9b3f0&base-origin=https://taxify-seven.vercel.app/&instance-name=Botsonic&standalone=true&page-url=https%3A%2F%2Fbot.writesonic.com%2Fbots%2F6190da53-00bb-415d-adf7-0bf1d512c063%2Fintegrations%3Ftab%3Dembeddings">
+</iframe>
 
 
   <footer id="footer" class="footer">
@@ -196,7 +171,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">❤️</a>
+        Designed by <a href="https://bootstrapmade.com/">❤</a>
       </div>
     </div>
 
