--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
               <li><a href="#">Balanced sheet</a></li>
               <li><a href="blog.html">Blogs</a></li>
               <li><a href="edu-portal.html">Edu-portal</a></li>
+                <li><a href="RTC.html">Chat.to.CA</a></li>
             </ul>
           </li>
           <li><a href="#contact">Contact</a></li>
