--- a/chat-bot.html
+++ b/chat-bot.html
@@ -81,6 +81,7 @@
                   <li><a href="#">Balanced sheet</a></li>
                   <li><a href="#">Blogs</a></li>
                   <li><a href="#">Edu-portal</a></li>
+                    <li><a href="RTC.html">Chat.to.CA</a></li>
                 </ul>
               </li>
               <li><a href="#contact">Contact</a></li>
